# ai-for-science

./: .gitignore  DEMO.md  HACKATHON_DAY_CHECKLIST.md  HACKATHON_METRICS_CARD.md  HACKATHON_NARRATIVE.md  README.md  pyproject.toml  requirements.txt  run_hackathon_demo.py  streamlit_app.py
data/: reagent_prices.csv
data/processed/: README.md
docs/: ARCHITECTURE.md  FILE_REORGANIZATION_PLAN.md  HACKATHON_BRIEF.md  HACKATHON_BRIEF_1PAGE.md  PROJECT_STATUS_HOLISTIC.md  REGENERATION_GUIDE.md  VAE_GENERATION_SUMMARY.md  budget_efficiency_analysis.md  deep_exploration_journey.md  exploration_bonus_justification.md  hackathon_narrative.md  portfolio_approach.md  visualization_proposal_agd.md
docs/archive/: ACTIVE_GENERATIVE_DISCOVERY_SUMMARY.md  FINAL_STATUS.md  LYNCHPIN_ANALYSIS_SUMMARY.md  NEXT_STEPS.md  SESSION_SUMMARY_FINAL_PREP.md  SESSION_SUMMARY_GENERATIVE_DISCOVERY.md
docs/guides/: GNN_IMPLEMENTATION_GUIDE.md  QUICKSTART.md  STREAMLIT_DEMO.md
docs/hackathon/: DEMO_CHEAT_SHEET.md  DEMO_SCRIPT_3MIN.md  HACKATHON_QUICK_REFERENCE.md  HACKATHON_READY_SUMMARY.md  HACKATHON_TROUBLESHOOTING.md  JUDGING_CRITERIA_MAP.md  PLOT_EXPLANATION_GUIDE.md  PRE_HACKATHON_CHECKLIST.md
docs/prework/: RECOMMENDED_APPROACH.md  SESSION_SUMMARY_OCT9.md  VAE_TRAINING_STATUS.md  WHERE_WE_ARE.md  addressing_gaps_and_risks.md  ai4science_hackathon_primer.md  competitive_analysis.md  complexity_risk_assessment.md  cost_framework_explained.md  dataset_comparison_mofx_vs_crafted.md  economic_active_learning_guide.md  four_dimensional_optimization.md  hackathon_project_analysis.md  hard_vs_economic_comparison.md  key_papers_technical_summary.md  mof_project_tiers.md  nobel_pivot_strategy.md  (+7 more)
src/: __init__.py
tests/: test_cost_estimator.py  test_economic_al.py  test_economic_al_crafted.py  test_economic_al_expected_value.py  test_visualizations.py
(+57 files in other folders)
